<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/language_flag_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/ic_launcher_round"
            android:contentDescription="@string/language_flag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chain_translation_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/edit_locale_button"
            android:layout_width="77dp"
            android:layout_height="49dp"
            android:layout_marginEnd="4dp"
            android:text="@string/edit_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_locale_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.583" />

        <Button
            android:id="@+id/delete_locale_button"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/delete_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/textToSpeech_locale_button"
            android:layout_width="31dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="8dp"
            android:drawableTop="@drawable/ic_action_speech"
            app:layout_constraintEnd_toStartOf="@+id/edit_locale_button"
            app:layout_constraintStart_toEndOf="@+id/chain_translation_text"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>